--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,8 @@ jobs:
         ruby-version: [ "3.1", "3.2", "3.3" ]
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: true
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
