add CI debug cmds

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,5 +24,10 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    - name: Debug
+      run:
+        - pwd
+        - ls -la
+        - ls -la test/fixtures/repo1
     - name: Run tests
       run: bin/test
