--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,6 @@ jobs:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Debug
-      run: pwd && ls -la && ls -la test/fixtures/repo1
+      run: cd test/fixtures/repo1 && git log
     - name: Run tests
       run: bin/test
