--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -1,4 +1,4 @@
-name: Build and Publish Docker Image
+name: Build and Publish arm64 Docker Image
 
 on:
   push:
@@ -6,17 +6,12 @@ on:
       - 'v*.*.*'  # Matches tags like v1.0.0, v2.1.3, etc.
 
 jobs:
-  build-and-publish:
-    runs-on: ubuntu-latest
+  publish-docker-image:
+    runs-on: ubuntu-24.04-arm
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-      with:
-        platforms: linux/arm64
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -32,7 +27,6 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        platforms: linux/arm64
         push: true
         # Cache to speed up builds
         cache-from: type=gha
