--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,22 @@ permissions:
   contents: read
 
 jobs:
-  all:
+  rubocop:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: true
+        fetch-depth: 0 # fetch all history, needed for fixture repo
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: 3.4
+        bundler-cache: true
+    - name: rubocop
+      run: bundle exec rubocop
+
+  tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -25,5 +40,5 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-    - name: Run tests
+    - name: tests
       run: bin/test
