--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: [ "3.2", "3.3", "3.4", "3.5.0-preview1" ]
+        ruby-version: [ "3.2", "3.3", "3.4" ]
     steps:
     - uses: actions/checkout@v4
       with:
