tests for merge

--- a/test/fixtures/configs/deploy.yml
+++ b/test/fixtures/configs/deploy.yml
@@ -1,3 +1,10 @@
+x:
+  shared_env: &shared_env
+    VERSION: 1
+
 services:
   app:
     public: true
+    env:
+      <<: *shared_env
+      APP_ENV: production
