--- a/test/fixtures/configs/deploy.staging.yml
+++ b/test/fixtures/configs/deploy.staging.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    public: false
+    public: <%= "false" if true %>
     instance_type: t4g.micro
     env:
       APP_ENV: staging
