Local config parse & merge (v1.10.0) (#47)

--- a/test/fixtures/configs/deploy.staging.yml
+++ b/test/fixtures/configs/deploy.staging.yml
@@ -1,3 +1,7 @@
 services:
   app:
+    public: <%= "false" if true %>
     instance_type: t4g.micro
+    env:
+      APP_ENV: staging
+      STAGING_VAR: abcd
